added grid skeleton with html and css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Dashboard Project</title>
 </head>
 <body>
-    
+    <div class="grid-container">
+        <div class="item-side"></div>
+        <div class="item-head"></div>
+        <div class="item-main"></div>
+    </div>
 </body>
 </html>
