completed outline of main content, no inner content

--- a/index.html
+++ b/index.html
@@ -123,7 +123,36 @@
                 </div>
             </div>
         </div>
-        <div class="item-main"></div>
+        <div class="item-main">
+            <div class="main-projects-container">
+                <div class="blank"></div>
+                <div class="blank"></div>
+                <div class="project-title">Projects</div>
+                <div class="blank"></div>
+                <div class="project-content"></div>
+                <div class="project-content"></div>
+                <div class="blank"></div>
+                <div class="blank"></div>
+                <div class="project-content"></div>
+                <div class="project-content"></div>
+                <div class="blank"></div>
+                <div class="blank"></div>
+                <div class="project-content"></div>
+                <div class="project-content"></div>
+                <div class="blank"></div>
+                <div class="blank"></div>
+            </div>
+            <div class="main-updates-container">
+                <div class="blank"></div>
+                <div class="announcement-title">Announcement</div>
+                <div class="announcement-content"></div>
+                <div class="blank"></div>
+                <div class="trending-title">Trending</div>
+                <div class="trending-content"></div>
+                <div class="blank"></div>
+                <div class="blank"></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
